[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/inventory/sprites/x_pressed.png" type="Texture" id=2]
[ext_resource path="res://asset/inventory/sprites/title.png" type="Texture" id=3]
[ext_resource path="res://Setting.gd" type="Script" id=4]
[ext_resource path="res://asset/inventory/sprites/inner_panel.png" type="Texture" id=5]
[ext_resource path="res://asset/inventory/sprites/x_hover.png" type="Texture" id=6]
[ext_resource path="res://asset/inventory/sprites/x_normal.png" type="Texture" id=7]
[ext_resource path="res://asset/inventory/sprites/x_disabled.png" type="Texture" id=8]
[ext_resource path="res://asset/inventory/sprites/main panel.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Setting" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -43.5
margin_right = 89.0
margin_bottom = 43.5
texture = ExtResource( 9 )
region_rect = Rect2( 1.61024, 2.21022, 27.6804, 26.6629 )
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 8
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 4 )
scale_slider = NodePath("Setting_list/Inventory/HSlider")
fullscreen_check = NodePath("Setting_list/Inventory2/CheckBox")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_top = -12.0
margin_right = 68.0
margin_bottom = 12.0
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 6
patch_margin_right = 9
patch_margin_bottom = 2

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 1 )
text = "Inventory"
align = 1
valign = 1

[node name="CloseBTN" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = -1.0
margin_bottom = 10.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Setting_list" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 13.0
margin_right = -9.0
margin_bottom = -7.0
custom_constants/separation = 2

[node name="Inventory" type="NinePatchRect" parent="Setting_list"]
margin_right = 158.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 5 )
region_rect = Rect2( 0.989311, 0.110748, 17.262, 18.1427 )
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="Setting_list/Inventory"]
margin_left = 26.0
margin_right = 150.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 2 )
text = "size"
align = 1

[node name="HSlider" type="HSlider" parent="Setting_list/Inventory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -8.0
margin_right = 76.0
margin_bottom = 8.0
min_value = 0.5
max_value = 1.5
step = 0.1
value = 1.0

[node name="Inventory2" type="NinePatchRect" parent="Setting_list"]
margin_top = 32.0
margin_right = 158.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 5 )
region_rect = Rect2( 0.989311, 0.110748, 17.262, 18.1427 )
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="Setting_list/Inventory2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.0
margin_right = 62.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"
align = 1

[node name="CheckBox" type="CheckBox" parent="Setting_list/Inventory2"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -12.0
margin_top = -20.0
margin_right = 12.0
margin_bottom = 4.0

[connection signal="pressed" from="CloseBTN" to="." method="_on_CloseBTN_pressed"]
[connection signal="gui_input" from="Setting_list/Inventory/HSlider" to="." method="_on_scale_slider_gui_input"]
[connection signal="toggled" from="Setting_list/Inventory2/CheckBox" to="." method="_on_CheckBox_toggled"]
